--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "node": "18.12.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.20",
         "@types/jsonwebtoken": "^9.0.3",
@@ -37,6 +38,7 @@
     },
     "dependencies": {
         "@types/body-parser": "^1.19.4",
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
