--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
         "typescript": "^4.9.5"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^6.1.6",
+        "@mui/x-data-grid": "^7.22.1",
         "@types/body-parser": "^1.19.4",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
